anonymization/main/default/objects/TEKCO_AnonymizationFieldConfig__mdt/TEKCO_AnonymizationFieldConfig__mdt.object-meta.xml
<CustomObject>
    <label>TEKCO Anonymization Field Config</label>
    <pluralLabel>TEKCO Anonymization Field Configs</pluralLabel>
</CustomObject>