anonymization/main/default/objects/TEKCO_AnonymizationFieldConfig__mdt/fields/TEKCO_AdditionalFilter__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_AdditionalFilter__c</fullName>
    <label>Additional Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>