anonymization/main/default/objects/TEKCO_AnonymizationFieldConfig__mdt/fields/TEKCO_ByIdParentLookupFieldApiName__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_ByIdParentLookupFieldApiName__c</fullName>
    <label>Parent Lookup Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>