anonymization/main/default/objects/TEKCO_AnonymizationFieldConfig__mdt/fields/TEKCO_ByIdParentObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_ByIdParentObjectApiName__c</fullName>
    <label>Parent Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>