anonymization/main/default/objects/TEKCO_AnonymizationFieldConfig__mdt/fields/TEKCO_ByIdParentRecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_ByIdParentRecordTypeDeveloperName__c</fullName>
    <label>Parent Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>