anonymization/main/default/objects/TEKCO_AnonymizationFieldConfig__mdt/fields/TEKCO_DeleteHistory__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_DeleteHistory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, field history records for this field will be deleted after anonymization.</description>
    <label>Delete History</label>
    <type>Checkbox</type>
</CustomField>