anonymization/main/default/objects/TEKCO_AnonymizationFieldConfig__mdt/fields/TEKCO_FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_FieldApiName__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>