anonymization/main/default/objects/TEKCO_AnonymizationFieldConfig__mdt/fields/TEKCO_ParentLookupFieldApiName__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_ParentLookupFieldApiName__c</fullName>
    <label>[By ID] Parent Lookup Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>