anonymization/main/default/objects/TEKCO_AnonymizationFieldConfig__mdt/fields/TEKCO_ParentObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_ParentObjectApiName__c</fullName>
    <label>[By ID] Parent Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>