anonymization/main/default/objects/TEKCO_AnonymizationFieldConfig__mdt/fields/TEKCO_ParentRecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_ParentRecordTypeDeveloperName__c</fullName>
    <label>[By ID] Parent RT Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>