anonymization/main/default/objects/TEKCO_AnonymizationFieldConfig__mdt/fields/TEKCO_PatternType__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_PatternType__c</fullName>
    <label>Pattern Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>