anonymization/main/default/objects/TEKCO_AnonymizationFieldConfig__mdt/fields/TEKCO_RecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_RecordTypeDeveloperName__c</fullName>
    <description>Optional. Comma-separated list of the Record Type developer names this rule covers, e.g. ACCCO_IndividualPerson,ACCCO_Patient. A single name is a list of one. Leave blank to apply to every record type. Combined with the Additional Filter, which narrows further.</description>
    <label>Record Type Developer Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>